--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2"
   },
